fixed subdisplay clipping

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ body{
 }
 
 #subDisplayContainer{
-  width:100%;
   padding: 5%;
   padding-bottom: 3%;
   height: 25%;
